# life_admin

./: .gitignore  CLAUDE.md  README.md  flow.py  life_admin_design.md  main.py  nodes.py  pyproject.toml  rag_agent_design.md
utils/: call_llm.py  config.py  embeddings.py  fetch_calendar.py  fetch_gmail.py  format_briefing.py  google_auth.py  read_imessages.py  read_notes.py  state.py  vector_store.py
